# panopticon

./: .gitignore  .gitmodules  .tool-versions  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  CMakeLists.txt.kc  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.simplexjs  Makefile  README  README.md  TODO  absinterp.cc  absinterp.hh  appveyor.yml  avr.cc  avr.hh  basic_block.cc  basic_block.hh  build.rs  decoder.hh  defaults.mk  dflow.cc  dflow.hh  examples  flow.cc  flowgraph.cc  flowgraph.hh  main.cc  mnemonic.cc  mnemonic.hh  panopticum  persistent_map.hh  procedure.cc  procedure.hh  rdf.cc  (+6 more)
abstract-interp/: Cargo.toml
abstract-interp/src/: bounded_addr_track.rs  interpreter.rs  kset.rs  lib.rs  widening.rs
abstract-interp/src/neo/: interpreter.rs  mod.rs
amd64/: Cargo.toml
amd64/src/: architecture.rs  disassembler.rs  lib.rs  semantic.rs  tables.rs
amd64/tests/: opcodes.rs  rappel_xcheck.rs
analysis/: Cargo.toml
analysis/src/: lib.rs  pipeline.rs
benchmark/: Cargo.toml
benchmark/benches/: core.rs  data_flow.rs  main.rs  panopticon_benchmark.rs
cli/: CMakeLists.txt  Cargo.toml  Makefile
cli/include/: filter.hh  input.hh  output.hh
cli/src/: avr.cc  dis.cc  display.rs  gv.cc  main.cc  main.rs  ric.cc  turtle.cc  zip.cc
cli/test/: Makefile
core/: Cargo.toml  build.rs
core/src/: basic_block.rs  disassembler.rs  function.rs  function_old.rs  il.rs  layer.rs  lib.rs  loader.rs  mnemonic.rs  program.rs  project.rs  region.rs  result.rs
core/src/il/: bitcode.rs  endianness.rs  language.rs  mod.rs  neo.rs  noop.rs  rreil.rs  value.rs
core/src/neo/: bitcode.rs  function.rs  il.rs  mod.rs  value.rs
core/tests/: function.rs  loader.rs  project.rs  region.rs
data-flow/: Cargo.toml
data-flow/src/: lib.rs  liveness.rs  ssa.rs
data-flow/src/neo/: liveness.rs  mod.rs  ssa.rs
doc/: CMakeLists.txt  arch.rst  conf.py  dev.rst  disass.rst  doxyfile  feats.rst  index.rst  install.rst  internals.rst  intro.rst  others.rst  pil.rst  qtpanop.rst  refs.rst  regions.rst  usage.rst
doc/_themes/panopticon/: LICENSE.ink  layout.html  site.css
doc/internals/: pil.rst  regions.rst
glue/: CMakeLists.txt  Cargo.toml  build.rs
glue/ext/lib/: CMakeLists.txt
glue/lib/: CMakeLists.txt
glue/lib/include/: glue.h  qbasicblockline.h  qcontrolflowgraph.h  qpanopticon.h  qrecentsession.h  qsidebar.h
glue/lib/src/: glue.cpp  qbasicblockline.cpp  qcontrolflowgraph.cpp  qpanopticon.cpp  qrecentsession.cpp  qsidebar.cpp
glue/src/: ffi.rs  glue.rs  lib.rs  types.rs
lib/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  panopticon.pc.in
lib/include/: absinterp.hh  architecture.hh  avr.hh  basic_block.hh  code_generator.hh  database.hh  decoder.hh  deflate.hh  dflow.hh  digraph.hh  disassembler.hh  flowgraph.hh  graph.hh  hash.hh  inflate.hh  interpreter.hh  layer.hh  loc.hh  marshal.hh  mnemonic.hh  procedure.hh  program.hh  region.hh  sat.hh  source.hh  value.hh
lib/include/avr/: avr.hh  until.hh
lib/include/panopticon/: architecture.hh  basic_block.hh  code_generator.hh  database.hh  dflow.hh  digraph.hh  disassembler.hh  ensure.hh  format.hh  hash.hh  instr.hh  interpreter.hh  loc.hh  marshal.hh  mnemonic.hh  procedure.hh  program.hh  region.hh  sat.hh  structure.hh  tree.hh  value.hh
lib/src/: absinterp.cc  abstractinterp.rs  avr.cc  basic_block.cc  basic_block.rs  code_generator.cc  codegen.rs  database.cc  dataflow.rs  deflate.cc  dflow.cc  dflow.rs  disassembler.cc  disassembler.rs  elf.rs  flowgraph.cc  format.cc  function.rs  guard.rs  il.rs  inflate.cc  instr.cc  instr.rs  interpreter.cc  layer.cc  layer.rs  lib.rs  loader.rs  loc.cc  loc.rs  main.cc  marshal.cc  marshal.rs  mnemonic.cc  mnemonic.rs  pipeline.rs  procedure.cc  program.cc  program.rs  project.rs  (+11 more)
lib/src/abstractinterp/: bounded_addr_track.rs  kset.rs  mod.rs
lib/src/amd64/: amd64.cc  decode.cc  decode.rs  extensions.rs  generic.cc  generic.rs  integer.rs  mod.rs  util.cc  (+6 more)
lib/test/: CMakeLists.txt  Makefile  amd64.asm  amd64.cc  amd64.s  architecture.cc  architecture.hh  avr.cc  basic_block.cc  database.cc  dflow.cc  digraph.cc  disassembler.cc  ia32.s  interpreter.cc  layer.cc  loc.cc  marshal.cc  mnemonic.cc  panopticon-test.cc  persistent_map.cc  procedure.cc  program.cc  region.cc  runtests.cc  save.panop  session.cc  sosse  store.cc  structure.cc  test.cc  test_architecture.hh  test_avr.hh  test_codegenerator.hh  test_disassembler.hh  test_graph.hh  test_inflate.hh  test_procedure.hh  test_source.hh  test_value.hh  (+3 more)
qt/: .ycm_extra_conf.py  BasicBlock.qml  CMakeLists.txt  Cargo.toml  Edge.qml  Makefile  qt.pro
qt/include/: actions.hh  actions.hh.dead  basicblockwidget.hh  bgl.hh  callgraph.hh  cflowgraph.hh  config.hh.in  controltransferwidget.hh  delegate.hh  elementselection.hh  filterwidget.hh  flowgraphwidget.hh  graph.hh  graphscene.hh.dead  graphstatemachine.hh  graphwidget.hh  interface.hh  linearscene.hh  linearview.hh  model.hh  panopticon.hh  path.hh  pen.hh  polygon.hh  procedurelist.hh  procedurewidget.hh  scene.hh  selection.hh  session.hh  stateMachine.hh  sugiyama.hh  viewport.hh  window.hh
qt/res/: Address.qml  BasicBlock.qml  Block.qml  Cursor.qml  Edge.qml  Element.qml  Graph.qml  Hex.qml  Hexdump.qml  New.qml  Page.qml  Procedure.qml  SaveAs.qml  Section.qml  Test.qml  Welcome.qml  Window.qml  graphStateMachine.scxml  layout.js  linearStateMachine.scxml  resources.qrc  route.js  simplex.js  springy.js  sugiyama.js
qt/src/: action.rs  actions.cc  actions.cc.dead  basicblockwidget.cc  bgl.cc  callgraph.cc  cflowgraph.cc  control_flow_layout.rs  controller.rs  controltransferwidget.cc  delegate.cc  elementselection.cc  filterwidget.cc  filterwidget.cc.dead  flowgraphwidget.cc  function.rs  glue.rs  graph.cc  graphscene.cc.dead  graphstatemachine.cc  graphwidget.cc  interface.cc  linearscene.cc  linearview.cc  main.cc  main.rs  model.cc  panopticon.cc  path.cc  paths.rs  polygon.cc  procedurelist.cc  procedurelist.cc.dead  procedurewidget.cc  project.rs  qt.rs  route.rs  scene.cc  selection.cc  session.cc  (+8 more)
qt/test/: CMakeLists.txt  dot.cc  order.cc  rank.cc
(+272 files in other folders)
