[package]
name = "panopticon"
version = "0.14.0"
authors = ["seu <seu@panopticon.re>"]

[lib]
name = "panopticon"
path = "lib/src/lib.rs"
test = true

[[bin]]
name = "qtpanopticon"
path = "qt/src/main.rs"

[dependencies]
log = "0.3.6"
rustc-serialize = "0.3.19"
num = "0.1.31"
tempdir = "0.3.4"
lazy_static = "0.1.16"
libc = "0.2.9"
uuid = { version = "0.2.0", features = ["rustc-serialize", "v4"]}
glpk-sys = "0.1.0"
flate2 = "0.2.13"
rmp-serialize = "0.7.0"
byteorder = "0.5.1"

[dependencies.qmlrs]
git = "https://github.com/flanfly/qmlrs"

[dependencies.graph_algos]
git = "https://github.com/flanfly/rust-graph-algos.git"

[target.i686-unknown-linux-gnu.dependencies]
xdg = "^2.0"

[target.x86_64-unknown-linux-gnu.dependencies]
xdg = "^2.0"

[target.x86_64-apple-darwin.dependencies]
xdg = "^2.0"

[target.i686-apple-darwin.dependencies]
xdg = "^2.0"
