[package]
name = "panopticon"
version = "0.16.0"
authors = ["seu <seu@panopticon.re>", "m4b <m4b.github.io@gmail.com>"]

[lib]
name = "panopticon"
path = "lib/src/lib.rs"
test = true

[[bin]]
name = "qtpanopticon"
path = "qt/src/main.rs"

[dependencies]
log = "0.3.6"
env_logger = "0.3"
rustc-serialize = "0.3.19"
num = "0.1.31"
tempdir = "0.3.4"
lazy_static = "0.1.16"
libc = "0.2.9"
uuid = { version = "0.2.0", features = ["rustc-serialize", "v4"]}
cassowary = "0.1.0"
flate2 = "0.2.13"
rmp-serialize = "0.8"
byteorder = "0.5.1"
chrono = "0.2"
chrono-humanize = "0.0.6"
goblin = "0.0.9"
clap = "2.20.5"
quickcheck = "0.3"
error-chain = "0.8"
futures = "0.1.13"
parking_lot = "0.4"

[dev-dependencies]
regex = "0.1"

[dependencies.qml]
git = "https://github.com/flanfly/qml-rust.git"
branch = "qvar-properties"

[dependencies.graph_algos]
git = "https://github.com/flanfly/rust-graph-algos.git"

[target.i686-unknown-linux-gnu.dependencies]
xdg = "^2.0"

[target.x86_64-unknown-linux-gnu.dependencies]
xdg = "^2.0"

[target.x86_64-apple-darwin.dependencies]
xdg = "^2.0"

[target.i686-apple-darwin.dependencies]
xdg = "^2.0"

[features]
# Cross checks the x86/AMD64 simulator against the CPU. Needs the rappel tool
# installed (https://github.com/yrp604/rappel).
cross-check-amd64 = []
