[package]
name = "panopticon-abstract-interp"
version = "0.16.0"
authors = ["seu <seu@panopticon.re>"]

[dependencies]
panopticon-core = { path = "../core" }
panopticon-data-flow = { path = "../data-flow" }
panopticon-graph-algos = { path = "../graph-algos" }
log = "0.3.6"
quickcheck = "0.4.1"
env_logger = "0.3"
serde = "1.0"
serde_derive = "1.0"
