[package]
name = "panopticon-amd64"
version = "0.16.0"
authors = ["seu <seu@panopticon.re>"]

[dependencies]
panopticon-core = { path = "../core" }
panopticon-data-flow = { path = "../data-flow" }
panopticon-graph-algos = { path = "../graph-algos" }
log = "0.3.6"
byteorder = "1"
env_logger = "0.3"
quickcheck = "0.3"

[dev-dependencies]
regex = "0.1"

[features]
# Cross checks the x86/AMD64 simulator against the CPU. Needs the rappel tool
# installed (https://github.com/yrp604/rappel).
cross-check-amd64 = []
