[package]
name = "panopticon-benchmark"
version = "0.16.0"
authors = ["seu <seu@panopticon.re>"]

[dependencies]
panopticon-core = { path = "../core" }
panopticon-data-flow = { path = "../data-flow" }
panopticon-amd64 = { path = "../amd64" }
petgraph = { version = "0.4.10", features = ["serde-1"], git = "https://github.com/m4b/petgraph", branch = "dominance_frontiers" }
bencher = "0.1.4"

[[bench]]
name = "panopticon_benchmark"
harness = false
path = "benches/main.rs"
