[package]
name = "panopticon-cli"
version = "0.16.0"
authors = ["seu <seu@panopticon.re>"]
edition = "2018"

[[bin]]
name = "panop"
path = "src/main.rs"

[dependencies]
structopt = "0.0.5"
structopt-derive = "0.0.5"
error-chain = "0.8"
futures = "0.1"
panopticon-core = { path = "../core" }
panopticon-analysis = { path = "../analysis" }
panopticon-amd64 = { path = "../amd64" }
panopticon-avr = { path = "../avr" }
panopticon-graph-algos = { path = "../graph-algos" }
log = "0.3"
env_logger = "0.3"
termcolor = "0.3.2"
atty = "0.2.2"
