[package]
name = "panopticon-core"
version = "0.16.0"
authors = ["seu <seu@panopticon.re>"]
build = "build.rs"

[dependencies]
num = "0.1"
log = "0.3.6"
env_logger = "0.3"
tempdir = "0.3.4"
libc = "0.2.9"
uuid = { version = "0.5", features = ["v4", "serde"]}
flate2 = "0.2.13"
byteorder = "0.5.1"
goblin = "0.0.9"
quickcheck = "0.3"
panopticon-graph-algos = { path = "../graph-algos" }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
rmp-serde = "0.13"

[dev-dependencies]
regex = "0.1"
panopticon-avr = { path = "../avr" }
