[package]
name = "panopticon-core"
version = "0.16.0"
authors = ["seu <seu@panopticon.re>"]
build = "build.rs"

[dependencies]
num = "0.1"
log = "0.3.6"
env_logger = "0.3"
tempdir = "0.3.4"
libc = "0.2.9"
uuid = { version = "0.5", features = ["v4", "serde"]}
flate2 = "0.2.13"
byteorder = "1"
goblin = "0.0.11"
panopticon-graph-algos = { path = "../graph-algos" }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_cbor = "0.6"
petgraph = "0.4.9"
leb128 = "0.2.1"
error-chain = "0.11.0"
quickcheck = "0.4.1"

[dev-dependencies]
regex = "0.1"
panopticon-avr = { path = "../avr" }

