[package]
name = "panopticon-glue"
version = "0.16.0"
authors = ["seu <seu@panopticon.re>"]
build = "build.rs"

[build-dependencies]
cmake = "0.1"
pkg-config = "0.3.9"

[dependencies]
panopticon-core = { path = "../core" }
panopticon-graph-algos = { path = "../graph-algos" }
log = "0.3.6"
error-chain = "0.8.1"
uuid = { version = "0.2.0", features = ["rustc-serialize", "v4"]}
futures = "0.1.13"
